--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "browser-sync start --server --files ."
+    "start": "browser-sync start --server --files .",
+    "build": "babel js -d dist",
+    "dev": "concurrently \"npm run start\" \"babel js -w -d dist\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.5.2",
     "browser-sync": "^2.18.12"
+  },
+  "dependencies": {
+    "concurrently": "^3.5.0"
   }
 }
